[SYNCOPE-1455] SRA now working with routes defined in Core